Job name changed

--- a/.github/workflows/my-first-flow.yml
+++ b/.github/workflows/my-first-flow.yml
@@ -2,7 +2,7 @@ name: My first workflow
 run-name: My Workflow
 on: [push]
 jobs:
-  my-workflow:
+  my-job:
     runs-on: ubuntu-latest
     steps:
       - run: echo "This is my first Workflow"
